fix: scrollbar for windows v1

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::-webkit-scrollbar {
+    width: 4px;
+    /* background: black; */
+}
+
+
+::-webkit-scrollbar-track {
+    /* background: #fff; */
+    border-radius: 5px;
+    /* margin: 5px; */
+}
+
+
+*::-webkit-scrollbar-thumb {
+    background: #ddd;
+    border-radius: 20px;
+    padding: 3px;
+}
+
+*::-webkit-scrollbar:horizontal {
+    width: 3px;
+    height: 4px;
+    /* background: black; */
+    margin: 5px;
+    padding: 5px;
+    /* margin: 5px 50px; */
+}
